# OpenGL-Stuff

./: .gitignore  BackgroundColorChanger.cpp  BackgroundColorChanger.hpp  CMakeLists.txt  Cube.cpp  Cube.hpp  Entity.cpp  Entity.hpp  FPSInput.cpp  FPSInput.h  Game.cpp  Game.hpp  HelloWindow.cpp  MainCamera.cpp  MainCamera.hpp  Makefile  PackedDynamicArray.hpp  README.md  Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp  main.cpp
Engine/: Camera.cpp  Camera.hpp  CameraTransform.cpp  CameraTransform.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Material.cpp  Material.h  Material.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  PackedDynamicArray.hpp  Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.hpp  Transform.cpp  Transform.hpp  coloredFragmentShader.glsl  coloredVertexShader.glsl  texFragment.glsl  texVertex.glsl  uniformColoredFragmentShader.glsl
